chore: Spring Boot version downgrade
3.0.6 -> 2.7.11